<?xml version="1.0"?>
<package format="2">
  <name>arc_star_ros</name>
  <version>1.0.0</version>
  <description>The Arc* Detector ROS package</description>

  <maintainer email="ialzugaray@mavt.ethz.ch">Ignacio Alzugaray</maintainer>
  <author>Ignacio Alzugaray</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dvs_msgs</depend>

  <export>

  </export>


</package>
